<resources>
    <string name="app_name">My Todo List</string>
    <string name="todo_list_title">My Todos</string>
    <string name="empty_list_message">No todos. Add a new todo!</string>

    <string name="todo_form_title">Create new todo</string>
    <string name="todo_form_button_title">Add</string>
    <string name="todo_form_textfield">Title of todo</string>

    <string name="todo_form_title_error">Please enter a title</string>
</resources>